fix(css): fix that contact me panel is visible at page load for a bit of time

--- a/src/styles/scss/05_components/_floating-panel.scss
+++ b/src/styles/scss/05_components/_floating-panel.scss
@@ -7,6 +7,11 @@
 }
 
 .floating-panel {
+  // start hidden, then GSAP animates it to visible
+  visibility: hidden;
+}
+
+.floating-panel {
   & {
     position: fixed;
     top: 0;
